partial haplotype code format change